# hearts

./: README.rst
CVSROOT/: loginfo  modules
hearts/: .cvsignore  AUTHORS  CMakeLists.txt  Makefile.am  Makefile.cvs  README  TODO  configure.in
hearts.admin/: create.sql  get-hearts-cvs-backup  upload-webpage
hearts.admin/public_html/: base.php  config.php  default.css  download.html  download.php  history.html  history.php  index.html  index.php  plan.php  register.php  screenshots.html  screenshots.php  translations.html  translations.php
hearts.admin/public_html/style/: bluegrey.css
hearts.releases/: hearts-0.0.10-1.i386.rpm  hearts-0.0.10-1.src.rpm  hearts-0.0.10-2.i386.rpm  hearts-0.0.10-2.src.rpm  hearts-0.0.11-1.i386.rpm  hearts-0.0.11-1.src.rpm  hearts-0.0.12-1.i386.rpm  hearts-0.0.12-1.src.rpm  hearts-0.0.13-1.i386.rpm  hearts-0.0.13-1.src.rpm  hearts-0.0.9-1.i386.rpm  hearts-0.0.9-1.src.rpm  hearts-0.90-1.i386.rpm  hearts-0.90-1.src.rpm  hearts-1.0-1.i386.rpm  hearts-1.0-1.src.rpm  hearts-1.2pre5-1.i386.rpm  hearts-1.2pre5-1.src.rpm  hearts-1.91-1.i386.rpm  hearts-1.95-1.i586.rpm  hearts-1.96.tar.bz2  hearts-1.97.tar.bz2  hearts-1.98.tar.bz2  hearts1_2-1.2pre6-1.i386.rpm
hearts/admin/: Makefile.common  acinclude.m4.in  am_edit  cvs.sh
hearts/clients/: CMakeLists.txt  Makefile.am
hearts/clients/computer/: .cvsignore  CMakeLists.txt  Makefile.am  computerplayer.cpp  computerplayer.h  computerplayer3_2.cpp  computerplayer3_2.h  computerplayer4.cpp  computerplayer4.h  computerplayerbase.cpp  computerplayerbase.h  main.cpp  options.cpp  options.h
hearts/clients/human/: .cvsignore  CMakeLists.txt  Makefile.am  carddisplay.cpp  carddisplay.h  hand.cpp  hand.h  humanclient.cpp  humanclient.h  humanclientoptions.h  humaninterface.cpp  humaninterface.h  main.cpp  multilinebox.cpp  multilinebox.h  networkdialog.ui  networkdialog.ui.h  networkmanager.cpp  networkmanager.h  options.cpp  options.h  pointsbox.cpp  pointsbox.h  preferencesdialog.ui  preferencesdialog.ui.h  privategamedialog.ui  privategamedialog.ui.h  qtconnection.cpp  qtconnection.h  serveraddressdialog.cpp  serveraddressdialog.h  tabledisplayer.cpp  tabledisplayer.h
hearts/clients/human/pics/: CMakeLists.txt  Makefile.am
hearts/clients/human/setup/: .cvsignore  Makefile.am  clientorserverwidget.ui  clientorserverwidget.ui.h  exec.cpp  exec.h  initialchoice.cpp  initialchoice.h  initialchoicewidget.ui  initialchoicewidget.ui.h  localsetup.cpp  localsetup.h  localsetupwidget.ui  localsetupwidget.ui.h  networkconnection.h  networksetup.cpp  networksetup.h  networksetupwidget.ui  networksetupwidget.ui.h  onlineplayerdialog.ui  onlineplayerdialog.ui.h  onlineplayerwidget.ui  playersetup.cpp  playersetup.h  privatesetup.cpp  privatesetup.h  remotesetup.cpp  remotesetup.h  remotesetupwidget.ui  serversetup.cpp  serversetup.h  serversetupwidget.ui  setupwindow.cpp  setupwindow.h  smartpage.h
hearts/common/: CMakeLists.txt  Makefile.am  Protocols.html
hearts/common/communication/: CMakeLists.txt  Makefile.am  connection.h  constants.h  dispatch.cpp  dispatch.h  factory.cpp  factory.h  fdconnection.cpp  fdconnection.h  message.cpp  message.h  open_connections.cpp  open_connections.h  protocol.cpp  protocol.h  translator.cpp  translator.h  typicalclient.cpp  typicalclient.h  typicalserver.cpp  typicalserver.h
hearts/common/general/: CMakeLists.txt  Makefile.am  auto_init.h  circular_iterator.h  error.cpp  error.h  helper.h  min_time.cpp  min_time.h  random_shuffle.h  setup.h  utilitario.cpp  utilitario.h  widget_placement.h
hearts/common/hearts/: .cvsignore  CMakeLists.txt  Makefile.am  card.cpp  card.h  cards.h  deck.cpp  deck.h  holder3.cpp  holder3.h  player_id.cpp  player_id.h  player_status.cpp  player_status.h  table.cpp  table.h
hearts/common/network/: .cvsignore  CMakeLists.txt  Makefile.am  authentication.cpp  authentication.h  buffer.cpp  buffer.h  connection.cpp  connection.h  constants.h  message.cpp  message.h  player_status.cpp  player_status.h  playerid.h  tableid.h  user_status.cpp
hearts/doc/: CMakeLists.txt
hearts/doc/en/: CMakeLists.txt  Makefile.am  index.docbook
hearts/misc/: CMakeLists.txt  Makefile.am  hearts.desktop  hearts.lsm  hearts.spec
hearts/network-server/: .cvsignore  Makefile.am  change_protocol.py  connection.py  database.cpp  database.h  database.py  environment.py  errors.py  execute.py  heartsd.py  inifile.cpp  inifile.h  logfile.cpp  logfile.h  main.cpp  motd.cpp  motd.h  motd.py  options.cpp  options.h  options.py  player.cpp  player.h  player.py  server.cpp  server.h  service.py  surevalidator.h  table.cpp  table.h  table.py  test.ini  users.py  userstatus.py  validate.py  validator.h  validator.hpp
hearts/network-server/etc/: heartsd.conf
hearts/network-server/etc/init.d/: hearts.conf  heartsd
hearts/po/: .cvsignore  CMakeLists.txt  Makefile.am  da.po  it.po  pt.po
hearts/server/: .cvsignore  CMakeLists.txt  Makefile.am  connectingplayer.cpp  connectingplayer.h  gamemanager.cpp  gamemanager.h  id_to_fd.cpp  id_to_fd.h  main.cpp  open.cpp  open.h  options.cpp  options.h  player.cpp  player.h  server.cpp  server.h  table.cpp  table.h
hearts/server/etc/init.d/: heartsserver
