bin_PROGRAMS = heartscomputerclient

heartscomputerclient_SOURCES = computerplayer.cpp computerplayer3_2.cpp computerplayer4.cpp computerplayerbase.cpp main.cpp options.cpp
EXTRA_DIST = computerplayer.h computerplayer3_2.h computerplayer4.h computerplayerbase.h computerplayer.cpp computerplayer3_2.cpp computerplayer4.cpp computerplayerbase.cpp main.cpp options.h options.cpp

heartscomputerclient_LDADD = ../../common/communication/libcomhearts.a ../../common/hearts/libhearts.a ../../common/general/libgenhearts.a   

INCLUDES = -I../../common

