noinst_LIBRARIES = libnethearts.a

libnethearts_a_SOURCES = buffer.cpp connection.cpp message.cpp 

AM_CXXFLAGS = -foperator-names -g

METASOURCES = AUTO

EXTRA_DIST = buffer.cpp buffer.h connection.cpp connection.h message.cpp message.h playerid.h  tableid.h tablemanager.h Makefile.am Makefile.in Makefile Protocol.html

INCLUDES = $(all_includes) -I../../common

