noinst_LIBRARIES = libnethearts.a

libnethearts_a_SOURCES = buffer.cpp connection.cpp message.cpp  authentication.cpp

AM_CXXFLAGS = -foperator-names -g

METASOURCES = AUTO

EXTRA_DIST = authentication.h buffer.cpp buffer.h connection.cpp connection.h message.cpp message.h playerid.h  tableid.h Makefile.am Makefile.in Makefile

INCLUDES = $(all_includes) -I../../common

