noinst_LIBRARIES = libnethearts.a

libnethearts_a_SOURCES = buffer.cpp connection.cpp message.cpp  authentication.cpp player_status.cpp

AM_CXXFLAGS = -foperator-names -g

METASOURCES = AUTO

EXTRA_DIST = authentication.h buffer.h connection.h message.h playerid.h  tableid.h Makefile.am Makefile.in player_status.h

INCLUDES = $(all_includes) -I../../common

