####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = C10.bmp C2.bmp C3.bmp C4.bmp C5.bmp C6.bmp C7.bmp C8.bmp C9.bmp Ca.bmp Cj.bmp Ck.bmp Cq.bmp D10.bmp D2.bmp D3.bmp D4.bmp D5.bmp D6.bmp D7.bmp D8.bmp D9.bmp Da.bmp Dj.bmp Dk.bmp Dq.bmp H10.bmp H2.bmp H3.bmp H4.bmp H5.bmp H6.bmp H7.bmp H8.bmp H9.bmp Ha.bmp Hj.bmp Hk.bmp Hq.bmp S10.bmp S2.bmp S3.bmp S4.bmp S5.bmp S6.bmp S7.bmp S8.bmp S9.bmp Sa.bmp Sj.bmp Sk.bmp Sq.bmp 

install-data-local:
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) C10.bmp $(kde_datadir)/hearts/C10.bmp
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) C2.bmp $(kde_datadir)/hearts/C2.bmp
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) C3.bmp $(kde_datadir)/hearts/C3.bmp
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) C4.bmp $(kde_datadir)/hearts/C4.bmp
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) C5.bmp $(kde_datadir)/hearts/C5.bmp
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) C6.bmp $(kde_datadir)/hearts/C6.bmp
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) C7.bmp $(kde_datadir)/hearts/C7.bmp
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) C8.bmp $(kde_datadir)/hearts/C8.bmp
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) C9.bmp $(kde_datadir)/hearts/C9.bmp
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) Ca.bmp $(kde_datadir)/hearts/Ca.bmp
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) Cj.bmp $(kde_datadir)/hearts/Cj.bmp
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) Ck.bmp $(kde_datadir)/hearts/Ck.bmp
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) Cq.bmp $(kde_datadir)/hearts/Cq.bmp
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) D10.bmp $(kde_datadir)/hearts/D10.bmp
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) D2.bmp $(kde_datadir)/hearts/D2.bmp
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) D3.bmp $(kde_datadir)/hearts/D3.bmp
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) D4.bmp $(kde_datadir)/hearts/D4.bmp
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) D5.bmp $(kde_datadir)/hearts/D5.bmp
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) D6.bmp $(kde_datadir)/hearts/D6.bmp
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) D7.bmp $(kde_datadir)/hearts/D7.bmp
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) D8.bmp $(kde_datadir)/hearts/D8.bmp
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) D9.bmp $(kde_datadir)/hearts/D9.bmp
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) Da.bmp $(kde_datadir)/hearts/Da.bmp
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) Dj.bmp $(kde_datadir)/hearts/Dj.bmp
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) Dk.bmp $(kde_datadir)/hearts/Dk.bmp
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) Dq.bmp $(kde_datadir)/hearts/Dq.bmp
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) H10.bmp $(kde_datadir)/hearts/H10.bmp
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) H2.bmp $(kde_datadir)/hearts/H2.bmp
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) H3.bmp $(kde_datadir)/hearts/H3.bmp
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) H4.bmp $(kde_datadir)/hearts/H4.bmp
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) H5.bmp $(kde_datadir)/hearts/H5.bmp
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) H6.bmp $(kde_datadir)/hearts/H6.bmp
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) H7.bmp $(kde_datadir)/hearts/H7.bmp
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) H8.bmp $(kde_datadir)/hearts/H8.bmp
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) H9.bmp $(kde_datadir)/hearts/H9.bmp
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) Ha.bmp $(kde_datadir)/hearts/Ha.bmp
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) Hj.bmp $(kde_datadir)/hearts/Hj.bmp
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) Hk.bmp $(kde_datadir)/hearts/Hk.bmp
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) Hq.bmp $(kde_datadir)/hearts/Hq.bmp
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) S10.bmp $(kde_datadir)/hearts/S10.bmp
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) S2.bmp $(kde_datadir)/hearts/S2.bmp
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) S3.bmp $(kde_datadir)/hearts/S3.bmp
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) S4.bmp $(kde_datadir)/hearts/S4.bmp
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) S5.bmp $(kde_datadir)/hearts/S5.bmp
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) S6.bmp $(kde_datadir)/hearts/S6.bmp
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) S7.bmp $(kde_datadir)/hearts/S7.bmp
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) S8.bmp $(kde_datadir)/hearts/S8.bmp
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) S9.bmp $(kde_datadir)/hearts/S9.bmp
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) Sa.bmp $(kde_datadir)/hearts/Sa.bmp
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) Sj.bmp $(kde_datadir)/hearts/Sj.bmp
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) Sk.bmp $(kde_datadir)/hearts/Sk.bmp
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) Sq.bmp $(kde_datadir)/hearts/Sq.bmp

uninstall-local:
	-rm -f $(kde_datadir)/hearts/C10.bmp
	-rm -f $(kde_datadir)/hearts/C2.bmp
	-rm -f $(kde_datadir)/hearts/C3.bmp
	-rm -f $(kde_datadir)/hearts/C4.bmp
	-rm -f $(kde_datadir)/hearts/C5.bmp
	-rm -f $(kde_datadir)/hearts/C6.bmp
	-rm -f $(kde_datadir)/hearts/C7.bmp
	-rm -f $(kde_datadir)/hearts/C8.bmp
	-rm -f $(kde_datadir)/hearts/C9.bmp
	-rm -f $(kde_datadir)/hearts/Ca.bmp
	-rm -f $(kde_datadir)/hearts/Cj.bmp
	-rm -f $(kde_datadir)/hearts/Ck.bmp
	-rm -f $(kde_datadir)/hearts/Cq.bmp
	-rm -f $(kde_datadir)/hearts/D10.bmp
	-rm -f $(kde_datadir)/hearts/D2.bmp
	-rm -f $(kde_datadir)/hearts/D3.bmp
	-rm -f $(kde_datadir)/hearts/D4.bmp
	-rm -f $(kde_datadir)/hearts/D5.bmp
	-rm -f $(kde_datadir)/hearts/D6.bmp
	-rm -f $(kde_datadir)/hearts/D7.bmp
	-rm -f $(kde_datadir)/hearts/D8.bmp
	-rm -f $(kde_datadir)/hearts/D9.bmp
	-rm -f $(kde_datadir)/hearts/Da.bmp
	-rm -f $(kde_datadir)/hearts/Dj.bmp
	-rm -f $(kde_datadir)/hearts/Dk.bmp
	-rm -f $(kde_datadir)/hearts/Dq.bmp
	-rm -f $(kde_datadir)/hearts/H10.bmp
	-rm -f $(kde_datadir)/hearts/H2.bmp
	-rm -f $(kde_datadir)/hearts/H3.bmp
	-rm -f $(kde_datadir)/hearts/H4.bmp
	-rm -f $(kde_datadir)/hearts/H5.bmp
	-rm -f $(kde_datadir)/hearts/H6.bmp
	-rm -f $(kde_datadir)/hearts/H7.bmp
	-rm -f $(kde_datadir)/hearts/H8.bmp
	-rm -f $(kde_datadir)/hearts/H9.bmp
	-rm -f $(kde_datadir)/hearts/Ha.bmp
	-rm -f $(kde_datadir)/hearts/Hj.bmp
	-rm -f $(kde_datadir)/hearts/Hk.bmp
	-rm -f $(kde_datadir)/hearts/Hq.bmp
	-rm -f $(kde_datadir)/hearts/S10.bmp
	-rm -f $(kde_datadir)/hearts/S2.bmp
	-rm -f $(kde_datadir)/hearts/S3.bmp
	-rm -f $(kde_datadir)/hearts/S4.bmp
	-rm -f $(kde_datadir)/hearts/S5.bmp
	-rm -f $(kde_datadir)/hearts/S6.bmp
	-rm -f $(kde_datadir)/hearts/S7.bmp
	-rm -f $(kde_datadir)/hearts/S8.bmp
	-rm -f $(kde_datadir)/hearts/S9.bmp
	-rm -f $(kde_datadir)/hearts/Sa.bmp
	-rm -f $(kde_datadir)/hearts/Sj.bmp
	-rm -f $(kde_datadir)/hearts/Sk.bmp
	-rm -f $(kde_datadir)/hearts/Sq.bmp

####### kdevelop will overwrite this part!!! (end)############
