####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = C10.png C2.png C3.png C4.png C5.png C6.png C7.png C8.png C9.png Ca.png Cj.png Ck.png Cq.png D10.png D2.png D3.png D4.png D5.png D6.png D7.png D8.png D9.png Da.png Dj.png Dk.png Dq.png H10.png H2.png H3.png H4.png H5.png H6.png H7.png H8.png H9.png Ha.png Hj.png Hk.png Hq.png S10.png S2.png S3.png S4.png S5.png S6.png S7.png S8.png S9.png Sa.png Sj.png Sk.png Sq.png 

install-data-local:
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) C10.png $(kde_datadir)/hearts/C10.png
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) C2.png $(kde_datadir)/hearts/C2.png
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) C3.png $(kde_datadir)/hearts/C3.png
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) C4.png $(kde_datadir)/hearts/C4.png
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) C5.png $(kde_datadir)/hearts/C5.png
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) C6.png $(kde_datadir)/hearts/C6.png
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) C7.png $(kde_datadir)/hearts/C7.png
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) C8.png $(kde_datadir)/hearts/C8.png
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) C9.png $(kde_datadir)/hearts/C9.png
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) Ca.png $(kde_datadir)/hearts/Ca.png
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) Cj.png $(kde_datadir)/hearts/Cj.png
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) Ck.png $(kde_datadir)/hearts/Ck.png
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) Cq.png $(kde_datadir)/hearts/Cq.png
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) D10.png $(kde_datadir)/hearts/D10.png
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) D2.png $(kde_datadir)/hearts/D2.png
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) D3.png $(kde_datadir)/hearts/D3.png
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) D4.png $(kde_datadir)/hearts/D4.png
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) D5.png $(kde_datadir)/hearts/D5.png
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) D6.png $(kde_datadir)/hearts/D6.png
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) D7.png $(kde_datadir)/hearts/D7.png
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) D8.png $(kde_datadir)/hearts/D8.png
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) D9.png $(kde_datadir)/hearts/D9.png
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) Da.png $(kde_datadir)/hearts/Da.png
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) Dj.png $(kde_datadir)/hearts/Dj.png
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) Dk.png $(kde_datadir)/hearts/Dk.png
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) Dq.png $(kde_datadir)/hearts/Dq.png
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) H10.png $(kde_datadir)/hearts/H10.png
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) H2.png $(kde_datadir)/hearts/H2.png
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) H3.png $(kde_datadir)/hearts/H3.png
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) H4.png $(kde_datadir)/hearts/H4.png
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) H5.png $(kde_datadir)/hearts/H5.png
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) H6.png $(kde_datadir)/hearts/H6.png
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) H7.png $(kde_datadir)/hearts/H7.png
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) H8.png $(kde_datadir)/hearts/H8.png
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) H9.png $(kde_datadir)/hearts/H9.png
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) Ha.png $(kde_datadir)/hearts/Ha.png
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) Hj.png $(kde_datadir)/hearts/Hj.png
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) Hk.png $(kde_datadir)/hearts/Hk.png
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) Hq.png $(kde_datadir)/hearts/Hq.png
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) S10.png $(kde_datadir)/hearts/S10.png
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) S2.png $(kde_datadir)/hearts/S2.png
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) S3.png $(kde_datadir)/hearts/S3.png
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) S4.png $(kde_datadir)/hearts/S4.png
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) S5.png $(kde_datadir)/hearts/S5.png
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) S6.png $(kde_datadir)/hearts/S6.png
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) S7.png $(kde_datadir)/hearts/S7.png
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) S8.png $(kde_datadir)/hearts/S8.png
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) S9.png $(kde_datadir)/hearts/S9.png
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) Sa.png $(kde_datadir)/hearts/Sa.png
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) Sj.png $(kde_datadir)/hearts/Sj.png
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) Sk.png $(kde_datadir)/hearts/Sk.png
	$(mkinstalldirs) $(kde_datadir)/hearts/
	$(INSTALL_DATA) Sq.png $(kde_datadir)/hearts/Sq.png

uninstall-local:
	-rm -f $(kde_datadir)/hearts/C10.png
	-rm -f $(kde_datadir)/hearts/C2.png
	-rm -f $(kde_datadir)/hearts/C3.png
	-rm -f $(kde_datadir)/hearts/C4.png
	-rm -f $(kde_datadir)/hearts/C5.png
	-rm -f $(kde_datadir)/hearts/C6.png
	-rm -f $(kde_datadir)/hearts/C7.png
	-rm -f $(kde_datadir)/hearts/C8.png
	-rm -f $(kde_datadir)/hearts/C9.png
	-rm -f $(kde_datadir)/hearts/Ca.png
	-rm -f $(kde_datadir)/hearts/Cj.png
	-rm -f $(kde_datadir)/hearts/Ck.png
	-rm -f $(kde_datadir)/hearts/Cq.png
	-rm -f $(kde_datadir)/hearts/D10.png
	-rm -f $(kde_datadir)/hearts/D2.png
	-rm -f $(kde_datadir)/hearts/D3.png
	-rm -f $(kde_datadir)/hearts/D4.png
	-rm -f $(kde_datadir)/hearts/D5.png
	-rm -f $(kde_datadir)/hearts/D6.png
	-rm -f $(kde_datadir)/hearts/D7.png
	-rm -f $(kde_datadir)/hearts/D8.png
	-rm -f $(kde_datadir)/hearts/D9.png
	-rm -f $(kde_datadir)/hearts/Da.png
	-rm -f $(kde_datadir)/hearts/Dj.png
	-rm -f $(kde_datadir)/hearts/Dk.png
	-rm -f $(kde_datadir)/hearts/Dq.png
	-rm -f $(kde_datadir)/hearts/H10.png
	-rm -f $(kde_datadir)/hearts/H2.png
	-rm -f $(kde_datadir)/hearts/H3.png
	-rm -f $(kde_datadir)/hearts/H4.png
	-rm -f $(kde_datadir)/hearts/H5.png
	-rm -f $(kde_datadir)/hearts/H6.png
	-rm -f $(kde_datadir)/hearts/H7.png
	-rm -f $(kde_datadir)/hearts/H8.png
	-rm -f $(kde_datadir)/hearts/H9.png
	-rm -f $(kde_datadir)/hearts/Ha.png
	-rm -f $(kde_datadir)/hearts/Hj.png
	-rm -f $(kde_datadir)/hearts/Hk.png
	-rm -f $(kde_datadir)/hearts/Hq.png
	-rm -f $(kde_datadir)/hearts/S10.png
	-rm -f $(kde_datadir)/hearts/S2.png
	-rm -f $(kde_datadir)/hearts/S3.png
	-rm -f $(kde_datadir)/hearts/S4.png
	-rm -f $(kde_datadir)/hearts/S5.png
	-rm -f $(kde_datadir)/hearts/S6.png
	-rm -f $(kde_datadir)/hearts/S7.png
	-rm -f $(kde_datadir)/hearts/S8.png
	-rm -f $(kde_datadir)/hearts/S9.png
	-rm -f $(kde_datadir)/hearts/Sa.png
	-rm -f $(kde_datadir)/hearts/Sj.png
	-rm -f $(kde_datadir)/hearts/Sk.png
	-rm -f $(kde_datadir)/hearts/Sq.png

####### kdevelop will overwrite this part!!! (end)############
