noinst_LIBRARIES = libheartssetup.a

libheartssetup_a_SOURCES = localsetup.cpp remotesetup.cpp serversetup.cpp setupwindow.cpp playersetup.cpp exec.cpp networksetupwidget.ui networksetup.cpp

AM_CXXFLAGS = -foperator-names -g

METASOURCES = AUTO

EXTRA_DIST = localsetup.cpp localsetup.moc.cpp playersetup.cpp playersetup.moc.cpp remotesetup.cpp remotesetup.moc.cpp serversetup.cpp serversetup.moc.cpp setupwindow.cpp setupwindow.moc.cpp exec.h localsetup.h playersetup.h remotesetup.h serversetup.h setupwindow.h 

INCLUDES = $(all_includes) -I../../../common

