noinst_LIBRARIES = libheartssetup.a

libheartssetup_a_SOURCES = localsetup.cpp remotesetup.cpp serversetup.cpp setupwindow.cpp playersetup.cpp exec.cpp networksetupwidget.ui networksetup.cpp initialchoicewidget.ui initialchoice.cpp localsetupwidget.ui

AM_CXXFLAGS = -foperator-names -g

METASOURCES = AUTO

EXTRA_DIST = localsetup.cpp playersetup.cpp remotesetup.cpp serversetup.cpp setupwindow.cpp exec.h localsetup.h playersetup.h remotesetup.h serversetup.h setupwindow.h 

INCLUDES = $(all_includes) -I../../../common

