noinst_LIBRARIES = libheartssetup.a

libheartssetup_a_SOURCES = localsetup.cpp remotesetup.cpp serversetup.cpp setupwindow.cpp exec.cpp networksetupwidget.ui networksetup.cpp initialchoicewidget.ui initialchoice.cpp localsetupwidget.ui privatesetup.cpp clientorserverwidget.ui serversetupwidget.ui remotesetupwidget.ui

AM_CXXFLAGS = -foperator-names -g

METASOURCES = AUTO

EXTRA_DIST = localsetup.cpp remotesetup.cpp serversetup.cpp setupwindow.cpp exec.h localsetup.h remotesetup.h serversetup.h setupwindow.h privatesetup.h clientorserverwidget.ui.h

INCLUDES = $(all_includes) -I../../../common

